Fix API errors, bugs & add new endpoints, all swagger-docs tests were successful
